--- a/main.html
+++ b/main.html
@@ -8,10 +8,15 @@
 </head>
 <body>
 	<div class="main">
+		<div class="instructions">
+		<p>Make Ryu throw Hadouken by clicking on him</p>
+		<p>Press and hold 'x' to make him strike a pose</p>
+		</div>
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken"></div>
 	</div>
